immanent-deprecated/traefik/ingress-imac.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-imac
spec:
  type: ExternalName
  externalName: traefik.traefik-imac.svc.80.mesh
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-imac
spec:
  tls:
    certResolver: letsencrypt
  entryPoints:
    - websecure
  routes:
  - match: Host(`traefik.imac.defn.ooo`)
    kind: Rule
    services:
    - name: traefik-imac
      port: 80
    middlewares:
      - name: traefik-forward-auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-imac
spec:
  tls:
    certResolver: letsencrypt
  entryPoints:
    - websecure
  routes:
  - match: Host(`pihole.imac.defn.ooo`)
    kind: Rule
    services:
    - name: traefik-imac
      port: 80
    middlewares:
      - name: traefik-forward-auth
